# flames-inference

./: FLAMeS_Inference_in_Colab.ipynb  README.md  pyproject.toml
src/flames_inference/: cli.py  inference.py  preprocessing.py  utils.py
src/flames_inference.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
