[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flames-inference"
version = "0.1.0"
description = "FLAMeS Inference: FLAIR Lesion Analysis in Multiple Sclerosis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nnunetv2",
    "nibabel",
    "surfa",
    "torch",
    "zenodo_get",
    "batchgenerators",
]

[project.scripts]
flames-inference = "flames_inference.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
